--- a/src/components/panels/style/cp-panel-pair.scss
+++ b/src/components/panels/style/cp-panel-pair.scss
@@ -17,10 +17,10 @@ $panel-border: 1px solid rgba(0, 0, 0, 0.5);
 
   .panel {
     position: absolute;
-    background: white;
+    background: black;
 
     &.panel-primary {
-      background: white; // rgb(240, 240, 240);
+      background: black; // slategrey; // white; // rgb(240, 240, 240);
 
       .panel-drag-handle {
         position: absolute;
