--- a/src/components/app/style/cp-button.scss
+++ b/src/components/app/style/cp-button.scss
@@ -2,7 +2,7 @@ $color-border: black;
 
 .button {
 	font-size: 13px;
-	background: white;
+	background: rgba(255, 255, 255, 0.8);
 	color: $color-border;
 	border-top: 1px solid $color-border;
 	border-bottom: 1px solid $color-border;
@@ -21,7 +21,7 @@ $color-border: black;
 	}
 
 	&.button-depressed {
-		background: $color-border;
+		background: rgba(0, 0, 0, 0.8);
 		color: white;
 	}
 }
@@ -29,5 +29,5 @@ $color-border: black;
 .button-group {
 	display: inline-block;
 	margin-left: 4px;
-	opacity: 0.5;
+	opacity: 0.7;
 }
