--- a/src/components/panels/style/cp-panel-pair.scss
+++ b/src/components/panels/style/cp-panel-pair.scss
@@ -20,7 +20,7 @@ $panel-border: 1px solid rgba(0, 0, 0, 0.5);
     background: black;
 
     &.panel-primary {
-      background: black; // slategrey; // white; // rgb(240, 240, 240);
+      background: grey; // white; // rgb(240, 240, 240);
 
       .panel-drag-handle {
         position: absolute;
