--- a/src/components/app/style/cp-button.scss
+++ b/src/components/app/style/cp-button.scss
@@ -2,14 +2,14 @@ $color-a: rgba(255, 255, 255, 0.7);
 
 .button {
 	font-size: 13px;
-	background: transparent; // rgba(0, 0, 0, 0.2);
-	color: $color-a; // white;
+	background: transparent;
+	color: $color-a;
 	padding: 3px 5px;
 	margin-left: 1px;
 
 	&.button-depressed {
-		background: $color-a; // tomato;
-		color: black; // white;
+		background: $color-a;
+		color: black;
 	}
 
 	&.button-disabled {
@@ -20,10 +20,16 @@ $color-a: rgba(255, 255, 255, 0.7);
 .button-group {
 	display: inline-block;
 	padding: 4px;
-	border-left: 1px solid rgba(255, 255, 255, 0.2);
 
 	&:first-child {
 		border: none;
-		margin-left: 4px;
+		margin-left: 12px;
+	}
+
+	.button-group-title {
+		color: $color-a;
+		font-size: 10px;
+		padding: 5px;
+		margin-left: 1px;
 	}
 }
