--- a/src/components/app/style/cp-button.scss
+++ b/src/components/app/style/cp-button.scss
@@ -1,35 +1,40 @@
-$color-a: rgba(255, 255, 255, 0.7);
-
+$color-a: grey; // rgba(255, 255, 255, 0.7);
+$radius: 0px;
 .button {
 	font-size: 13px;
-	background: transparent;
+	background: rgba(170, 170, 170, 0.1);
 	color: $color-a;
-	padding: 3px 5px;
+	//padding: 3px 5px;
+	padding: 8px;
 	margin-left: 1px;
 
 	&.button-depressed {
-		background: $color-a;
-		color: black;
+		background: rgba(100, 100, 100, 1);
+		color: white;
 	}
 
 	&.button-disabled {
-		opacity: 0.5;
+		opacity: 0.6;
+	}
+
+	&:first-child {
+		border-top-left-radius: $radius;
+		border-bottom-left-radius: $radius;
+	}
+
+	&:last-child {
+		border-top-right-radius: $radius;
+		border-bottom-right-radius: $radius;
 	}
 }
 
 .button-group {
 	display: inline-block;
-	padding: 4px;
+	border-radius: $radius;
+	margin-right: 8px;
 
 	&:first-child {
 		border: none;
-		margin-left: 12px;
-	}
-
-	.button-group-title {
-		color: $color-a;
-		font-size: 10px;
-		padding: 5px;
-		margin-left: 1px;
+		margin-left: 4px;
 	}
 }
