--- a/src/components/panels/style/cp-panel-pair.scss
+++ b/src/components/panels/style/cp-panel-pair.scss
@@ -1,118 +1,119 @@
-$panel-border: 1px solid transparent; // rgba(255, 255, 255, 0.1);
+$panel-border: 0px solid transparent;
 
 .panel-pair-container {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
 }
 
 .panel-pair {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
 
-  .panel {
-    position: absolute;
-    background: black;
+	.panel {
+		position: absolute;
+		//background: black;
+		background: #333; // darkslategrey;
 
-    &.panel-primary {
-      background: #333;
+		&.panel-primary {
+			//background: grey;
 
-      .panel-drag-handle {
-        position: absolute;
-        z-index: 1;
-        background: rgba(255, 255, 0, 0.002);
-      }
-    }
-  }
+			.panel-drag-handle {
+				position: absolute;
+				z-index: 1;
+				background: rgba(255, 255, 0, 0.002);
+			}
+		}
+	}
 
-  .shield {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: rgba(255, 255, 0, 0.002);
-    z-index: 1;
-  }
+	.shield {
+		position: absolute;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		background: rgba(255, 255, 0, 0.002);
+		z-index: 1;
+	}
 
-  &.panel-pair-horizontal {
-    > .panel {
-      top: 0;
-      bottom: 0;
+	&.panel-pair-horizontal {
+		> .panel {
+			top: 0;
+			bottom: 0;
 
-      > .panel-drag-handle {
-        top: 0;
-        bottom: 0;
-        width: 20px;
-        cursor: ew-resize;
-      }
+			> .panel-drag-handle {
+				top: 0;
+				bottom: 0;
+				width: 20px;
+				cursor: ew-resize;
+			}
 
-      &:first-child {
-        left: 0;
-        border-right: $panel-border;
+			&:first-child {
+				left: 0;
+				border-right: $panel-border;
 
-        > .panel-drag-handle {
-          right: 0;
-          margin-right: -10px;
-        }
-      }
+				> .panel-drag-handle {
+					right: 0;
+					margin-right: -10px;
+				}
+			}
 
-      &:last-child {
-        right: 0;
-        border-left: $panel-border;
+			&:last-child {
+				right: 0;
+				border-left: $panel-border;
 
-        > .panel-drag-handle {
-          left: 0;
-          margin-left: -10px;
-        }
-      }
-    }
-  }
+				> .panel-drag-handle {
+					left: 0;
+					margin-left: -10px;
+				}
+			}
+		}
+	}
 
-  &.panel-pair-vertical {
-    > .panel {
-      left: 0;
-      right: 0;
+	&.panel-pair-vertical {
+		> .panel {
+			left: 0;
+			right: 0;
 
-      > .panel-drag-handle {
-        left: 0;
-        right: 0;
-        height: 20px;
-        cursor: ns-resize;
-      }
+			> .panel-drag-handle {
+				left: 0;
+				right: 0;
+				height: 20px;
+				cursor: ns-resize;
+			}
 
-      &:first-child {
-        top: 0;
-        border-bottom: $panel-border;
+			&:first-child {
+				top: 0;
+				border-bottom: $panel-border;
 
-        > .panel-drag-handle {
-          bottom: 0;
-          margin-bottom: -10px;
-        }
-      }
+				> .panel-drag-handle {
+					bottom: 0;
+					margin-bottom: -10px;
+				}
+			}
 
-      &:last-child {
-        bottom: 0;
-        border-top: $panel-border;
+			&:last-child {
+				bottom: 0;
+				border-top: $panel-border;
 
-        > .panel-drag-handle {
-          top: 0;
-          margin-top: -10px;
-        }
-      }
-    }
-  }
+				> .panel-drag-handle {
+					top: 0;
+					margin-top: -10px;
+				}
+			}
+		}
+	}
 
-  &.panel-pair-fixed {
-    > .panel {
-      > .panel-drag-handle {
-        display: none;
-      }
-    }
-  }
+	&.panel-pair-fixed {
+		> .panel {
+			> .panel-drag-handle {
+				display: none;
+			}
+		}
+	}
 }
