Get data from server

--- a/src/components/app/style/properties.scss
+++ b/src/components/app/style/properties.scss
@@ -1,9 +1,10 @@
 .properties {
 	padding: 8px;
 	color: lightgrey;
+	font-size: 12px;
 
 	h2 {
-		font-size: 15px;
+		//font-size: 15px;
 		margin-left: 4px;
 		margin-bottom: 4px;
 	}
