--- a/src/components/app/scss/properties.scss
+++ b/src/components/app/scss/properties.scss
@@ -6,7 +6,7 @@
 	h2 {
 		font-size: 16px;
 		margin: 0 1px 0 0;
-		padding: 4px;
+		padding: 4px 8px;
 		height: 20px;
 		background: rgba(255, 255, 255, 0.05);
 	}
