--- a/src/components/app/scss/list.scss
+++ b/src/components/app/scss/list.scss
@@ -1,16 +1,14 @@
 .list {
-	padding: 8px;
-	font-size: 12px;
 	color: lightgrey;
 	user-select: none;
 
 	h2 {
-		padding: 0;
-		margin: 0 0 8px 4px;
+		padding: 8px;
+		margin: 0;
 	}
 
 	.list-item {
-		padding: 4px;
+		padding: 8px;
 		cursor: default;
 
 		.delete {
