--- a/src/components/app/scss/properties.scss
+++ b/src/components/app/scss/properties.scss
@@ -1,13 +1,15 @@
 .properties {
-	padding: 2px;
+	padding: 0;
 	color: lightgrey;
-	font-size: 12px;
 
 	h2 {
-		font-size: 16px;
 		margin: 0 1px 0 0;
+		padding: 8px;
+		background: lightgrey;
+		color: black;
+	}
+
+	.body {
 		padding: 4px 8px;
-		height: 20px;
-		background: rgba(255, 255, 255, 0.05);
 	}
 }
