--- a/src/components/app/scss/button.scss
+++ b/src/components/app/scss/button.scss
@@ -7,7 +7,8 @@ body * {
 .button {
 	background: white;
 	color: black;
-	min-width: 48px;
+	//min-width: 48px;
+	min-width: 4em;
 
 	&:hover {
 		background: yellow;
@@ -31,6 +32,15 @@ body * {
 			background: tomato;
 		}
 	}
+
+	&.clear {
+		background: limegreen;
+		color: white;
+
+		&:hover {
+			background: lightgreen;
+		}
+	}
 }
 
 .label {
@@ -46,6 +56,6 @@ body * {
 		text-align: center;
 		pointer-events: all;
 		display: inline-block;
-		padding: 8px;
+		padding: 0.5em;
 	}
 }
