--- a/src/components/app/scss/list.scss
+++ b/src/components/app/scss/list.scss
@@ -1,20 +1,20 @@
 .list {
-	color: lightgrey;
+	//color: lightgrey;
 	user-select: none;
 
 	h2 {
-		padding: 8px;
+		padding: 0.5em;
 		margin: 0;
 	}
 
 	.list-item {
-		padding: 8px;
+		padding: 0.3em 0.5em;
 		cursor: default;
 
 		.delete {
 			display: none;
 			color: lightgrey;
-			padding: 0 4px;
+			padding: 0 0.25em;
 			float: right;
 
 			&:hover {
