--- a/src/components/app/scss/properties.scss
+++ b/src/components/app/scss/properties.scss
@@ -1,15 +1,9 @@
 .properties {
-	padding: 0;
-	color: lightgrey;
+	color: white;
 
 	h2 {
-		margin: 0 1px 0 0;
-		padding: 8px;
-		background: lightgrey;
-		color: black;
-	}
-
-	.body {
-		padding: 4px 8px;
+		margin: 0 0 0 0;
+		padding: 0.5em;
+		border-bottom: 1px solid grey;
 	}
 }
