--- a/src/components/panels/scss/cp-panel-pair.scss
+++ b/src/components/panels/scss/cp-panel-pair.scss
@@ -6,6 +6,7 @@ $panel-border: 0px solid transparent;
 	left: 0;
 	right: 0;
 	bottom: 0;
+	overflow: hidden;
 }
 
 .panel-pair {
@@ -121,9 +122,9 @@ $panel-border: 0px solid transparent;
 		position: absolute;
 		top: 0;
 		left: 0;
-		right: 48px;
+		right: 4em;
 		bottom: 0;
-		background: dimgrey;
+		background: #555;
 		color: white;
 	}
 
@@ -131,7 +132,7 @@ $panel-border: 0px solid transparent;
 		position: absolute;
 		top: 0;
 		right: 0;
-		width: 48px;
+		width: 4em;
 		bottom: 0;
 	}
 }
