--- a/src/index.scss
+++ b/src/index.scss
@@ -11,16 +11,18 @@
 
 body {
 	background: white;
-	font-family: 'Roboto', serif;
-
-	font-size: 20px;
+	//font-family: 'Roboto', sans-serif;
+	font-family: sans-serif;
+	font-size: 12px;
 
 	text {
 		font-size: 12px;
 	}
 }
 
+
 h1, h2, h3, h4, h5, div, span {
+	font-weight: normal;
 	outline: none;
 	user-select: none;
 	font-size: 1em;
