--- a/src/components/map/scss/cp-map.scss
+++ b/src/components/map/scss/cp-map.scss
@@ -141,10 +141,10 @@ path {
 	}
 
 	&.extent {
-		fill: grey;
-		stroke: grey;
+		fill: green;
+		stroke: green;
 		stroke-width: 2px;
-		opacity: 0.6;
+		opacity: 0.5;
 	}
 }
 
