--- a/src/components/app/scss/radio-button.scss
+++ b/src/components/app/scss/radio-button.scss
@@ -16,15 +16,15 @@
 			position: relative;
 			width: 0.6em;
 			height: 0.6em;
-			border: 0.1em solid lightgrey;
+			//border: 2px solid white;
 			border-radius: 1.2em;
-			background: lightgrey;
+			background: rgba(255, 255, 255, 0.2);
 			margin-right: 0.5em;
 		}
 
 		&.selected {
 			&:before {
-				background: black;
+				background: white;
 			}
 		}
 	}
