--- a/src/components/app/scss/radio-button.scss
+++ b/src/components/app/scss/radio-button.scss
@@ -1,7 +1,7 @@
 .radio-buttons {
 	h3 {
 		color: lightgrey;
-		margin-bottom: 0;
+		margin-bottom: 0.8em;
 		padding: 0.3em 1em;
 		border-bottom: 1px solid grey;
 	}
