--- a/src/components/app/scss/properties.scss
+++ b/src/components/app/scss/properties.scss
@@ -1,6 +1,16 @@
 .properties {
 	color: white;
 
+	.column {
+		position: absolute;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		display: flex;
+		flex-direction: column;
+	}
+
 	h2 {
 		margin: 0 0 0 0;
 		padding: 0.5em;
@@ -9,5 +19,10 @@
 
 	h3 {
 		margin-bottom: 0.5em;
+	}
+
+	.body {
+		flex-grow: 1;
+		overflow: auto;
 	}
 }
