--- a/src/index.scss
+++ b/src/index.scss
@@ -11,9 +11,9 @@
 
 body {
 	background: white;
-	//font-family: 'Roboto', sans-serif;
-	font-family: sans-serif;
-	font-size: 16px;
+	font-family: 'Roboto', sans-serif;
+	//font-family: sans-serif;
+	font-size: 15px;
 
 	text {
 		font-size: 12px;
