--- a/src/components/app/scss/button.scss
+++ b/src/components/app/scss/button.scss
@@ -5,16 +5,18 @@ body * {
 }
 
 .button {
-	background: rgb(230, 230, 230); //white;
+	background: rgba(255, 255, 255, 0.8);
 	color: black;
 	min-width: 4em;
+	margin-right: 1px;
+	margin-bottom: 1px;
 
 	&:hover {
-		background: white; // yellow;
+		background: white;
 	}
 
 	&.button-depressed {
-		background: dodgerblue; // lime;
+		background: dodgerblue;
 		color: white;
 	}
 
@@ -46,6 +48,8 @@ body * {
 .label {
 	background: black;
 	color: white;
+	margin-right: 1px;
+	margin-bottom: 1px;
 }
 
 .button-group {
