--- a/src/components/app/scss/feature-card.scss
+++ b/src/components/app/scss/feature-card.scss
@@ -1,5 +1,7 @@
 .feature-card {
 	.table {
+		margin-top: 0.3em;
+
 		.row {
 			&:hover {
 				background: rgba(255, 255, 255, 0.1);
@@ -7,7 +9,7 @@
 
 			.cell {
 				width: auto;
-				padding: 0.3em 0.5em;
+				padding: 0.3em 1em;
 				display: inline-block;
 
 				&:first-child {
