--- a/src/components/app/scss/list.scss
+++ b/src/components/app/scss/list.scss
@@ -1,14 +1,15 @@
 .list {
 	//color: lightgrey;
 	user-select: none;
+	margin-top: 0.3em;
 
 	h2 {
-		padding: 0.5em;
+		padding: 0.5em 1em;
 		margin: 0;
 	}
 
 	.list-item {
-		padding: 0.3em 0.5em;
+		padding: 0.3em 1em;
 		cursor: default;
 
 		.delete {
