--- a/src/components/panels/scss/cp-panel-pair.scss
+++ b/src/components/panels/scss/cp-panel-pair.scss
@@ -28,6 +28,7 @@ $panel-border: 0px solid transparent;
 				position: absolute;
 				z-index: 1;
 				background: rgba(255, 255, 0, 0.002);
+				//background: red;
 			}
 		}
 	}
