--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -10,7 +10,7 @@
 }
 
 body {
-	background: white;
+	background: #666; // lightgrey;
 	font-family: 'Roboto', sans-serif;
 	//font-family: sans-serif;
 	font-size: 15px;
