--- a/packages/lite/src/components/map/scss/cp-map.scss
+++ b/packages/lite/src/components/map/scss/cp-map.scss
@@ -119,80 +119,86 @@ svg {
 	width: 100%;
 	height: 100%;
 
-	path {
-		fill: none;
-		stroke: $colorRegular;
-		stroke-width: 1;
+	&.geometries {
+		path {
+			fill: none;
+			stroke: $colorRegular;
+			stroke-width: 3;
 
-		&.selected {
-			stroke: $colorSelected;
-			stroke-dasharray: 2;
+			&.selected {
+				stroke: $colorSelected;
+				stroke-dasharray: 3;
+			}
+
+			&.polygon,
+			&.circle {
+				fill-opacity: 0.1;
+				fill: $colorRegular;
+
+				&.selected {
+					fill: $colorSelected;
+				}
+			}
+
+			&.polygon {
+				&.selected {
+					stroke-width: 0;
+				}
+			}
+
+			&.arrow-head {
+				fill: $colorRegular;
+
+				&.selected {
+					fill: $colorSelected;
+				}
+			}
+
+			&.bbox {
+				stroke: grey;
+				stroke-dasharray: 2;
+			}
 		}
 
-		&.polygon,
-		&.circle {
-			fill-opacity: 0.1;
+		circle {
 			fill: $colorRegular;
 
-			&.selected {
+			&.selected,
+			&.vertex {
 				fill: $colorSelected;
 			}
-		}
 
-		&.polygon {
-			&.selected {
-				stroke-width: 0;
+			&.vertex-selected {
+				fill: none;
+				stroke: $colorSelected;
 			}
 		}
 
-		&.arrow-head {
-			fill: $colorRegular;
+		text {
+			font-size: 11px;
+			fill: $colorSelected;
+			text-anchor: middle;
+			paint-order: stroke;
+		}
+	}
 
-			&.selected {
-				fill: $colorSelected;
-			}
+	&.crosshair {
+		path {
+			fill: none;
+			stroke: green;
 		}
 
-		&.extent {
+		circle {
+			fill: none;
+			stroke: green;
+		}
+	}
+
+	&.extent {
+		path {
 			fill: green;
 			stroke: none;
 			opacity: 0.3;
-		}
-
-		&.cross {
-			fill: none;
-			stroke: green;
-		}
-
-		&.bbox {
-			stroke: grey;
-			stroke-dasharray: 2;
-		}
-	}
-
-	text {
-		font-size: 11px;
-		fill: $colorSelected;
-		text-anchor: middle;
-		paint-order: stroke;
-	}
-
-	circle {
-		fill: $colorRegular;
-
-		&.selected,
-		&.vertex {
-			fill: $colorSelected;
-		}
-
-		&.vertex-selected {
-			fill: none;
-			stroke: $colorSelected;
-		}
-
-		&.cross {
-			fill: none;
-			stroke: green;
 		}
 	}
 }
